[package]
name = "floui-sys"
version = "0.1.1"
edition = "2021"
description = "A SwiftUI inspired native wrapper for iOS and Android widgets"
repository = "https://github.com/MoAlyousef/floui-rs"
documentation = "https://docs.rs/floui"
keywords = ["gui", "ui", "widgets", "bindings", "mobile"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[target.'cfg(not(android))'.build-dependencies]
cc = "1"